Run in cohort form, generalization visualize tools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,16 +10,14 @@ export(distributionTable)
 export(extractDataNeutrophilAnalysis)
 export(heatmapData)
 export(neutropenia)
-export(parameterTree)
 export(plotNeutrophil)
-export(readJson)
-export(regimenInYear)
 export(repetitionTrendHeatmap)
 export(sankeyDiagram)
 export(saveCohortDescription)
 export(treatmentLineFromEpisode)
+export(yearlyGraph)
 import(RColorBrewer)
-import(collapsibleTree)
+import(data.table)
 import(dplyr)
 import(ggplot2)
 import(highcharter)
