Violin Plot add

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,7 @@
 export(cohortCycle)
 export(cohortDescription)
 export(cohortRecords)
-export(createCycleCohort)
-export(createLineCohort)
+export(createCohort)
 export(distributionTable)
 export(extractDataNeutrophilAnalysis)
 export(heatmapData)
@@ -14,6 +13,7 @@ export(neutropenia)
 export(plotNeutrophil)
 export(sankeyDiagram)
 export(treatmentLineFromEpisode)
+export(violinPlot)
 export(yearlyGraph)
 import(RColorBrewer)
 import(data.table)
@@ -21,8 +21,12 @@ import(dplyr)
 import(ggplot2)
 import(gridExtra)
 import(highcharter)
+import(hrbrthemes)
 import(networkD3)
+import(plotly)
 import(reshape2)
 import(scales)
 import(superheat)
 import(tidyr)
+import(tidyverse)
+import(viridis)
